--- a/Demos/supermap-vue-demo/index.html
+++ b/Demos/supermap-vue-demo/index.html
@@ -25,7 +25,7 @@
     <script type="module" src="/src/main.ts"></script>
   </body>
   <!-- 根据使用具体组件的需要引入其他第三方依赖 -->
-  <script src="https://cdn.jsdelivr.net/npm/echarts@5.0.2/dist/echarts.min.js" async></script>
-  <script src="/js/axios.min.js" ></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/echarts@5.0.2/dist/echarts.min.js" async></script> -->
+  <!-- <script src="/js/axios.min.js" ></script> -->
   <!-- <script src="https://www.supermapol.com/earth/vue-iEarth/examples/public/js/axios.min.js" async></script> -->
 </html>
