supermap-vue-demo：测试其他cesium源

--- a/Demos/supermap-vue-demo/index.html
+++ b/Demos/supermap-vue-demo/index.html
@@ -4,17 +4,33 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/Cesium/Widgets/widgets.css" rel="stylesheet">
-    <script src="/Cesium/Cesium.js" ></script>
 
     <!-- vue + element-plus-->
     <!-- <script src="https://www.supermapol.com/earth/vue-iEarth/examples/public/js/vue.global.prod.js"></script>
     <link rel="stylesheet" href="https://www.supermapol.com/earth/vue-iEarth/examples/public/element-plus/index.css">
     <script src="https://www.supermapol.com/earth/vue-iEarth/examples/public/element-plus/index.full.js"></script> -->
+
     <!-- cesium -->
+    <!-- 本地supermap cesium -->
+    <link href="/Cesium/Widgets/widgets.css" rel="stylesheet">
+    <script src="/Cesium/Cesium.js" ></script>
+    <!-- 远程supermap cesium -->
     <!-- <link href="https://www.supermapol.com/earth/vue-iEarth/examples/public/Cesium/Widgets/widgets.css"
         rel="stylesheet">
     <script src="https://www.supermapol.com/earth/vue-iEarth/examples/public/Cesium/Cesium.js"></script> -->
+    <!-- 远程 cesium -->
+    <!-- <script src="https://cesium.com/downloads/cesiumjs/releases/1.67/Build/Cesium/Cesium.js"></script>
+    <link
+      href="https://cesium.com/downloads/cesiumjs/releases/1.67/Build/Cesium/Widgets/widgets.css"
+      rel="stylesheet"
+    /> -->
+    <!-- 远程kiwi cesium -->
+    <!-- <link
+      href="https://mesh-static.oss-cn-hangzhou.aliyuncs.com/static/Cesium/Widgets/widgets.css"
+      rel="stylesheet"
+    />
+    <script src="https://mesh-static.oss-cn-hangzhou.aliyuncs.com/static/Cesium/Cesium.js"></script> -->
+
     <!-- 组件包 -->
     <!-- <link href="https://www.supermapol.com/earth/vue-iEarth/examples/dist/components.css" rel="stylesheet">
     <script src="https://www.supermapol.com/earth/vue-iEarth/examples/dist/components.js"></script> -->
