service-worker-demo: 完成测试代码

--- a/Demos/service-worker-demo/index-cache-test.html
+++ b/Demos/service-worker-demo/index-cache-test.html
@@ -42,7 +42,7 @@
              */
             console.log('<======重新注册自己作用域的 Service Worker======>')
             // navigator.serviceWorker.register('./sw.js?v=20190401235959')
-            navigator.serviceWorker.register('./sw.js')
+            navigator.serviceWorker.register('./sw-cache-test.js')
             // navigator.serviceWorker.register('./sw-workbox.js')
 
             /**
